[package]
name = "discogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
rusqlite = "0.31.0"
# https://serde.rs/derive.html
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
walkdir = "2.5.0"
